--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <li><a href="./recipes.html">Recipes</a></li> 
     <li><a href="./contact.html">Contact</a></li>    
     </ul>
-    <H1>Travel from North to South discovering the best tortillas de patatas</H1>
+    <H1>Tortilla Hop</H1>
+    <p>Travel from North to South discovering the best tortillas de patatas in Spain</p>
 =======
     <link rel="stylesheet" href="./css/style.css">
     <title>Tortilla Hop</title>
