--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<<<<<<< HEAD
     <title>Tortilla Hop</title>
     <link rel="stylesheet" href="./css/style.css"
 </head>
 <body>
-    <ul>
+    <ul class="nav">
     <li><a href="../index.html">Tortilla Hop</a></li>
     <li><a href="./routes.html">Routes</a></li>
     <li><a href="./recipes.html">Recipes</a></li> 
@@ -17,12 +16,5 @@
     </ul>
     <H1>Tortilla Hop</H1>
     <p>Travel from North to South discovering the best tortillas de patatas in Spain</p>
-=======
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Tortilla Hop</title>
-</head>
-<body>
-    
->>>>>>> 3a1f6f3e096dc285aed22ae2419528f8fc9d6d6e
 </body>
 </html>
