--- a/index.html
+++ b/index.html
@@ -1,20 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tortilla Hop</title>
-    <link rel="stylesheet" href="./css/style.css"
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" >
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    <ul class="nav">
-    <li><a href="../index.html">Tortilla Hop</a></li>
-    <li><a href="./routes.html">Routes</a></li>
-    <li><a href="./recipes.html">Recipes</a></li> 
-    <li><a href="./contact.html">Contact</a></li>    
-    </ul>
-    <H1>Tortilla Hop</H1>
-    <p>Travel from North to South discovering the best tortillas de patatas in Spain</p>
+<!-- Footer -->
+<footer class="page-footer font-small special-color-dark pt-4">
+
+    <!-- Footer Elements -->
+    <div class="container">
+  
+      <!-- Social buttons -->
+      <ul class="list-unstyled list-inline text-center">
+        <li class="list-inline-item">
+          <a class="btn-floating btn-fb mx-1">
+            <a href="https://es-es.facebook.com/"><i class="fab fa-facebook-f facebook" target="_blank"></i></a>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-tw mx-1">
+            <a href="https://twitter.com/?lang=es" target="_blank"><i class="fab fa-twitter twitter"></i></a>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-gplus mx-1">
+            <a href="https://www.youtube.com/?hl=es&gl=ES" target="_blank"><i class="fab fa-youtube youtube"></i></a>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-li mx-1">
+            <a href="https://es.linkedin.com/" target="_blank"><i class="fab fa-linkedin-in linkedin"></i></a>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-instagram mx-1">
+            <a href="https://www.instagram.com/?hl=es" target="_blank"><i class="fab fa-instagram instagram"></i></a>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3"><i class="far fa-copyright"></i> 2020 Copyright:
+      <a class="pink" href="https://www.wildcodeschool.com/es-ES" target="_blank"> wildcodeschool.com</a>
+    </div>
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>  
 </body>
 </html>
