--- a/html/routes.html
+++ b/html/routes.html
@@ -9,7 +9,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Josefin+Sans|Josefin+Slab|Montserrat|Montserrat+Alternates|Oswald&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
 </head>
 
@@ -18,61 +18,22 @@
         <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
           <div class="container">
-            <a class="navbar-brand" href="#"><img class="logo" src="img/tortilla_logo.png"></a>
+            <a class="navbar-brand" href="/index.html"><img class="logo" src="/img/tortilla_logo.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="/index.html">Tortilla Hop <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="./html/routes.html">Routes</a>
-                <a class="nav-item nav-link" href="./html/recipes.html">Recipes</a>
-                <a class="nav-item nav-link" href="./html/contact.html">Contact</a>
+                <a class="nav-item nav-link" href="routes.html">Routes</a>
+                <a class="nav-item nav-link" href="recipes.html">Recipes</a>
+                <a class="nav-item nav-link" href="contact.html">Contact</a>
               </div>
             </div>            
           </div>
 
     
-      <!-- FOOTER -->
-<footer class="page-footer font-small special-color-dark pt-4">
 
-  <!-- Footer Elements -->
-  <div class="container">
-
-    <!-- Social buttons -->
-    <ul class="list-unstyled list-inline text-center">
-      <li class="list-inline-item">
-        <a class="btn-floating btn-fb mx-1">
-          <a href="https://es-es.facebook.com/"><i class="fab fa-facebook-f facebook" target="_blank"></i></a>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-tw mx-1">
-          <a href="https://twitter.com/?lang=es" target="_blank"><i class="fab fa-twitter twitter"></i></a>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-gplus mx-1">
-          <a href="https://www.youtube.com/?hl=es&gl=ES" target="_blank"><i class="fab fa-youtube youtube"></i></a>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-li mx-1">
-          <a href="https://es.linkedin.com/" target="_blank"><i class="fab fa-linkedin-in linkedin"></i></a>
-        </a>
-      </li>
-      <li class="list-inline-item">
-        <a class="btn-floating btn-instagram mx-1">
-          <a href="https://www.instagram.com/?hl=es" target="_blank"><i class="fab fa-instagram instagram"></i></a>
-        </a>
-      </li>
-    </ul>
-  </div>
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3"><i class="far fa-copyright"></i> 2020 Copyright:
-    <a class="pink" href="https://www.wildcodeschool.com/es-ES" target="_blank"> wildcodeschool.com</a>
-  </div>
-</footer>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
