--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
           <div class="container">
-            <a class="navbar-brand" href="#"><img class="logo" src="img/tortilla_logo.png"></a>
+            <a class="navbar-brand" href="index.html"><img class="logo" src="img/tortilla_logo.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">Tortilla Hop <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="./html/routes.html">Routes</a>
-                <a class="nav-item nav-link" href="./html/recipes.html">Recipes</a>
-                <a class="nav-item nav-link" href="./html/contact.html">Contact</a>
+                <a class="nav-item nav-link active" href="index.html">Tortilla Hop <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="/html/routes.html">Routes</a>
+                <a class="nav-item nav-link" href="/html/recipes.html">Recipes</a>
+                <a class="nav-item nav-link" href="/html/contact.html">Contact</a>
               </div>
             </div>            
           </div>
