--- a/html/routes.html
+++ b/html/routes.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Josefin+Sans|Josefin+Slab|Montserrat|Montserrat+Alternates|Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/fav_icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/fav_icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/fav_icon/favicon-16x16.png">
+    <link rel="manifest" href="/fav_icon/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 
 </head>
 
