--- a/html/routes.html
+++ b/html/routes.html
@@ -22,21 +22,45 @@
     <body>
         <!-- menu navegacion bootstrap -->
         <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
-          <div class="container">
-            <a class="navbar-brand" href="/index.html"><img class="logo" src="/img/tortilla_logo.png"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="/index.html">Tortilla Hop <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="routes.html">Routes</a>
-                <a class="nav-item nav-link" href="recipes.html">Recipes</a>
-                <a class="nav-item nav-link" href="contact.html">Contact</a>
+          <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
+            <div class="container">
+              <a class="navbar-brand" href="index.html"><img class="logo" src="/img/tortilla_logo.png"
+                  alt="Tortilla Hop's logo"></a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-item nav-link active" href="index.html">Tortilla Hop <span
+                      class="sr-only">(current)</span></a>
+                  <a class="nav-item nav-link" href="/html/routes.html">Routes</a>
+                  <a class="nav-item nav-link" href="/html/recipes.html">Recipes</a>
+                  <a class="nav-item nav-link" href="/html/contact.html">Contact</a>
+                </div>
               </div>
-            </div>            
+            </div>
+          </nav>
+        </header>
+
+          <!--CARDS CONTAINER1-->
+          <div class="container_routes1">
+            <!-- TARJETA VERTICAL + TORTILLA DESCRIP -->
+            <div class="card" style="width: 18rem;">
+              <img src="/img/tortilla_logo.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+            <!-- TARJETA HORIZONTAL CITY -->
+            <div class="horizontal_city_card">
+
+            </div>
           </div>
+
+          
 
     
 
