--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link
     href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Josefin+Sans|Josefin+Slab|Montserrat|Montserrat+Alternates|Oswald&display=swap"
     rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cardo:400,400i,700&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="./css/style.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/fav_icon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/fav_icon/favicon-32x32.png">
@@ -20,8 +21,6 @@
   <link rel="manifest" href="/fav_icon/site.webmanifest">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-
-
 </head>
 
 <body>
