recipes and gif

--- a/html/routes.html
+++ b/html/routes.html
@@ -44,7 +44,7 @@
           </nav>
         </header>
         <div class="routes_title_subtitle">
-          <h2>Routes:</h2><p>Discover Spain through tasting delicious tortillas de patata in different regions</p>
+          <h2>Routes</h2><p>Discover Spain through tasting delicious tortillas de patata in different regions</p>
         </div>
           <!--CARDS CONTAINER1-->
           <div class="container_routes1">
