--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- img gif portada mapa tortilla -->
 
     <div class="imagen mapa tortilla">
-      <img src="./img/mapa_tortilla.png" class="map_animated col-xs-1 col-sm-8 col-md-8  col-lg-9 col-xl-10"
+      <img src="./img/mapa_tortilla_opt.gif" class="map_animated col-xs-1 col-sm-8 col-md-8  col-lg-9 col-xl-10"
         alt="mapa de España dividido por regiones y tipos de tortilla de patatas">
     </div>
 
