--- a/html/recipes.html
+++ b/html/recipes.html
@@ -53,9 +53,11 @@
   </div>
 
   <!-- HORIZONTAL CARDS RECIPES -->
+<div class="external_container_Hcards">
+
   <div class="horizontal_recipe_card">
     <div class="img_part">
-      <img class="recipe_pic" src="/img/tortilla_logo.png" alt="recipe picture">
+      <img class="recipe_pic" src="/img/tortilla_recetas/tortilla_horno_cazuela.jpg" alt="tortilla de patata recipe, oven style">
     </div>
     <div class="description_part">
       <!-- button data target -->
@@ -66,15 +68,65 @@
       </p>
       <div class="collapse" id="collapseExample">
         <div class="card card-body">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+          Tortilla de patata al horno en cazuela. cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
         </div>
       </div>
     </div>
-      
   </div>
-  
+
+  <div class="horizontal_recipe_card">
+    <div class="img_part">
+      <img class="recipe_pic" src="/img/tortilla_recetas/tortilla_betanzos_receta.jpg" alt="tortilla de patata recipe, oven style">
+    </div>
+    <div class="description_part">
+      <!-- button data target -->
+      <p>
+        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+          Read more...
+        </button>
+      </p>
+      <div class="collapse" id="collapseExample">
+        <div class="card card-body">
+          a tortilla de patatas es una de las joyas más reconocidas internacionalmente de la gastronomía española. Es una receta que admite algunas variaciones (con cebolla o sin ella, más o menos cuajada…) y que encuentra uno de sus máximos exponentes en la tortilla de Betanzos.
+Para muchos expertos, es la mejor tortilla de patatas de España. Y no es algo nuevo. Los orígenes de este plato se sitúan en los primeros años del siglo XX, cuando el restaurante La Casilla comenzó a preparar su propia modalidad de la tortilla española. Quisieron preparar un plato bien jugoso, con más proporción de huevo… y consiguieron crear todo un icono de la zona. Como curiosidad, a día de hoy sigue abierto (Avenida de Castilla, 90), después de tres generaciones, el restaurante tiene el orgullo de considerarse el impulsor de la tortilla de Betanzos. Su fama no solo provoca auténticas peregrinaciones hasta el pueblo para degustar este manjar, sino que también en la propia localidad, se disputan cada año el ansiado reconocimiento de ser el restaurante que mejor la cocina.
+Características de la tortilla de Betanzos:
+Ya hemos podido hacernos una idea de cómo es una auténtica tortilla de Betanzos. La clave está en que solo tiene cuatro ingredientes y de excelente calidad. La buena, la auténtica, la que cocinan las abuelas en sus casas con mimo y por las que los restaurantes cuelgan el cartel de completo es aquella que está preparada con huevos camperos ecológicos y patatas Kennebec. Esta variedad de patata gallega es la encargada de darle el toque suave, además de la yema del huevo (necesitamos camperos ecológicos para que tengan cuanta más yema, mejor). Para completar la jugada maestra, se fríe en aceite de oliva virgen extra. Y nada más: tres ingredientes de calidad para un plato de lujo al alcance de todos. Olvidamos la cebolla o las variantes con jamón o similares. No están ni se les espera. Aunque parezca un plato sencillo de cocinar, tiene su parte de complicación, ya que tenemos que conseguir que el huevo cuaje pero que se quede poco cocinado. La característica principal es que la tortilla debe quedar cuajada por fuera y jugosa, pero casi líquida por dentro. La cantidad de líquido o melosidad depende del toque final de cada uno. Las patatas se deben cortar finas, irregulares y pequeñas.
+Receta de la tortilla de Betanzos
+Si queremos animarnos a tratar de preparar en casa la tortilla de Betanzos, podemos ponernos manos a la obra con los siguientes ingredientes. 
+500 gramos de patata Kennebec
+10 huevos camperos
+Aceite de oliva virgen extra (la cantidad que necesites para freír)
+Opcional: sal al gusto
+Lo primero que tenemos que hacer es pelar las patatas, como hemos comentado, pequeñas, finas e irregulares. Ponemos a calentar un poco de aceite de oliva virgen extra en la sartén que vayamos a utilizar para su elaboración (mejor una alta) y cuando esté el aceite caliente, las echamos a freír. Mientras que empiezan a dorarse, vamos preparando los huevos. Cascamos y mezclamos los huevos suavemente. Este paso es importante para que la yema quede melosa y no demasiado líquida. 
+Cuando las patatas ya estén empezando a dorarse (muy importante que no estén del todo cocinadas, ya que quedarían demasiado duras o quemadas), añadimos el huevo a la sartén con cuidado de que se mezcle bien con todo. Debe quedar una especie de masa bien integrada. Si queremos salar, antes de empezar a moverlo es el momento de hacerlo.
+Hasta aquí hemos hecho lo fácil, la mezcla de huevos y patatas. Pero para que nos quede una auténtica tortilla de Betanzos tendremos que cuidar bien cómo removemos y los tiempos que lo dejamos. Para que no se queme, para que no se cocine el huevo y sobre todo para que quede esa masa jugosita, hay que darle varias vueltas a la mezcla, aproximadamente cada 30 segundos, con el fuego bajo. Después de estas tres vueltas, ya estaría listo. El huevo apenas habrá estado un minuto y medio en el fuego, lo cual debería haber sido suficiente para cuajar sin llegar a solidificarse. Deja reposar durante un minuto antes de servir y consúmela fría, templada o caliente, a gusto del consumidor.
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="horizontal_recipe_card">
+    <div class="img_part">
+      <img class="recipe_pic" src="/img/tortilla_recetas/tortilla_betanzos_receta.jpg" alt="tortilla de calabaza">
+    </div>
+    <div class="description_part">
+      <!-- button data target -->
+      <p>
+        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+          Read more...
+        </button>
+      </p>
+      <div class="collapse" id="collapseExample">
+        <div class="card card-body">
+          Tortilla de calabaza
+        </div>
+      </div>
+    </div>
+  </div>
 
 
+
+</div>
 
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
