--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 
     <div class="imagen mapa tortilla">
       <img src="./img/mapa_tortilla_opt.gif" class="map_animated col-xs-1 col-sm-8 col-md-8  col-lg-9 col-xl-10"
-        alt="mapa de España dividido por regiones y tipos de tortilla de patatas">
+        alt="mapa de España dividido por regiones y tipos de tortilla de patata">
     </div>
 
     <div class="motto">
-      <h2>Travel from North to South discovering the best tortillas de patatas in Spain</h2>
+      <h2>Travel from North to South discovering the best tortillas de patata in Spain</h2>
     </div>
   </div>
 
