routes + github_icon

--- a/html/routes.html
+++ b/html/routes.html
@@ -1,76 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tortilla Hop</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" >
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-    <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Josefin+Sans|Josefin+Slab|Montserrat|Montserrat+Alternates|Oswald&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cardo:400,400i,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/fav_icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/fav_icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/fav_icon/favicon-16x16.png">
-    <link rel="manifest" href="/fav_icon/site.webmanifest">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Tortilla Hop</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+  <link
+    href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Josefin+Sans|Josefin+Slab|Montserrat|Montserrat+Alternates|Oswald&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cardo:400,400i,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="/fav_icon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/fav_icon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/fav_icon/favicon-16x16.png">
+  <link rel="manifest" href="/fav_icon/site.webmanifest">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
 </head>
 
-    <body>
-        <!-- menu navegacion bootstrap -->
-        <header>
-          <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
-            <div class="container">
-              <a class="navbar-brand" href="index.html"><img class="logo" src="/img/tortilla_logo.png"
-                  alt="Tortilla Hop's logo"></a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-item nav-link active" href="index.html">Tortilla Hop <span
-                      class="sr-only">(current)</span></a>
-                  <a class="nav-item nav-link" href="/html/routes.html">Routes</a>
-                  <a class="nav-item nav-link" href="/html/recipes.html">Recipes</a>
-                  <a class="nav-item nav-link" href="/html/contact.html">Contact</a>
-                </div>
-              </div>
-            </div>
-          </nav>
-        </header>
-        <div class="routes_title_subtitle">
-          <h2>Routes</h2><p>Discover Spain through tasting delicious tortillas de patata in different regions</p>
-        </div>
-          <!--CARDS CONTAINER1-->
-          <div class="container_routes1">
-            <!-- TARJETA VERTICAL + TORTILLA DESCRIP -->
-            <div class="card" style="width: 18rem;">
-              <img src="/img/tortilla_logo.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-            <!-- TARJETA HORIZONTAL CITY -->
-            <div class="horizontal_city_card">
-
-            </div>
+<body>
+  <!-- menu navegacion bootstrap -->
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="/index.html"><img class="logo" src="/img/tortilla_logo.png"
+            alt="Tortilla Hop's logo"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="/index.html">Tortilla Hop <span
+                class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="/html/routes.html">Routes</a>
+            <a class="nav-item nav-link" href="/html/recipes.html">Recipes</a>
+            <a class="nav-item nav-link" href="/html/contact.html">Contact</a>
           </div>
+        </div>
+      </div>
+    </nav>
+  </header>
 
-          
 
-    
+  <!-- CARD ROUTES -->
+  <!-- Page Content -->
+  <div class="container">
+
+    <!-- Page Heading -->
+    <h2 class="my-4">ROUTES
+      <small>Discover Spain through tasting delicious tortillas de patata in different regions</small>
+    </h2>
+
+    <!-- Project One -->
+    <div class="row">
+      <div class="col-md-7">
+        <img class="img-fluid rounded mb-3 mb-md-0" src="/img/Panoramicas_regiones/panorámica Betanzos.jpg"
+          alt="imagen panorámica de Betanzos">
+      </div>
+
+      <div class="col-md-5">
+        <h3>Betanzos</h3>
+        <p>Betanzos is a municipality in the autonomous community of Galicia in northwestern Spain in the province of A
+          Coruña. It belongs to the comarca of Betanzos. The town is located in a fertile valley close to the Atlantic
+          Ocean, and it has one of the best preserved old quarters in Galicia. Other sights in the town are several town
+          palaces, a 16th-century clock tower, and the town walls, which preserve three of their original four gates.
+        </p>
+        <a class="btn btn-primary" href="/html/recipes.html">See recipe</a>
+      </div>
+    </div>
+    <!-- /.row -->
+
+    <hr>
+
+    <!-- Project Two -->
+    <div class="row">
+      <div class="col-md-7">
+        <a href="#">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+        </a>
+      </div>
+      <div class="col-md-5">
+        <h3>Project Two</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus
+          distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
+        <a class="btn btn-primary" href="/html/recipes.html">View Project</a>
+      </div>
+    </div>
+    <!-- /.row -->
+
+    <hr>
+
+    <!-- Project Three -->
+    <div class="row">
+      <div class="col-md-7">
+        <a href="#">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+        </a>
+      </div>
+      <div class="col-md-5">
+        <h3>Project Three</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde
+          repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias
+          possimus!</p>
+        <a class="btn btn-primary" href="/html/recipes.html">View Project</a>
+      </div>
+    </div>
+    <!-- /.row -->
+
+    <hr>
+
+    <!-- Project Four -->
+    <div class="row">
+
+      <div class="col-md-7">
+        <a href="#">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+        </a>
+      </div>
+      <div class="col-md-5">
+        <h3>Project Four</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem
+          officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?
+        </p>
+        <a class="btn btn-primary" href="/html/recipes.html">View Project</a>
+      </div>
+    </div>
+  </div>
 
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+  <!-- FOOTER -->
+  <footer class="page-footer font-small special-color-dark pt-4">
+
+    <!-- Footer Elements -->
+    <div class="container">
+
+      <!-- Social buttons -->
+      <ul class="list-unstyled list-inline text-center">
+        <li class="list-inline-item">
+          <a class="btn-floating btn-fb mx-1">
+            <a href="https://es-es.facebook.com/" target="_blank"><i class="fab fa-facebook-f facebook"></i></a>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-tw mx-1">
+            <a href="https://twitter.com/?lang=es" target="_blank"><i class="fab fa-twitter twitter"></i></a>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-gplus mx-1">
+            <a href="https://www.youtube.com/?hl=es&gl=ES" target="_blank"><i class="fab fa-youtube youtube"></i></a>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-li mx-1">
+            <a href="https://es.linkedin.com/" target="_blank"><i class="fab fa-linkedin-in linkedin"></i></a>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-instagram mx-1">
+            <a href="https://www.instagram.com/?hl=es" target="_blank"><i class="fab fa-instagram instagram"></i></a>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-github-1">
+            <a href="https://github.com/" target="_blank"><i class="fab fa-github github"></i></a>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3"><i class="far fa-copyright"></i> <strong>2020 Copyright</strong>
+      <a class="pink" href="https://www.wildcodeschool.com/es-ES" target="_blank"> wildcodeschool.com</a>
+    </div>
+  </footer>
+
+
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
