--- a/index.html
+++ b/index.html
@@ -97,10 +97,15 @@
             <a href="https://www.instagram.com/?hl=es" target="_blank"><i class="fab fa-instagram instagram"></i></a>
           </a>
         </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-github-1">
+            <a href="https://github.com/" target="_blank"><i class="fab fa-github github"></i></a>
+          </a>
+        </li>
       </ul>
     </div>
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3"><i class="far fa-copyright"></i> 2020 Copyright:
+    <div class="footer-copyright text-center py-3"><i class="far fa-copyright"></i> 2020 Copyright
       <a class="pink" href="https://www.wildcodeschool.com/es-ES" target="_blank"> wildcodeschool.com</a>
     </div>
   </footer>
