--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="btn-floating btn-github-1">
+          <a class="btn-floating btn-fb mx-1">
             <a href="https://github.com/" target="_blank"><i class="fab fa-github github"></i></a>
           </a>
         </li>
