routes últimos retoques

--- a/html/routes.html
+++ b/html/routes.html
@@ -61,18 +61,17 @@
     <!-- Project One -->
     <div class="row">
       <div class="col-md-7">
-        <img class="img-fluid rounded mb-3 mb-md-0" src="/img/Panoramicas_regiones/panorámica Betanzos.jpg"
-          alt="imagen panorámica de Betanzos">
+        <a href="http://www.turismocoruna.com/web/" target="_blank">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="/img/Panoramicas_regiones/coruna.jpg"
+          alt="imagen panorámica de Coruña">
+        </a>
       </div>
 
       <div class="col-md-5">
-        <h3>Betanzos</h3>
-        <p>Betanzos is a municipality in the autonomous community of Galicia in northwestern Spain in the province of A
-          Coruña. It belongs to the comarca of Betanzos. The town is located in a fertile valley close to the Atlantic
-          Ocean, and it has one of the best preserved old quarters in Galicia. Other sights in the town are several town
-          palaces, a 16th-century clock tower, and the town walls, which preserve three of their original four gates.
+        <h3>A Coruña</h3>
+        <p>A Coruña is a city and municipality of Galicia, Spain. The name is reputedly from the Greek Κορώνα (Crown), referring to the crown of Geryon that was buried by Hercules under the lighthouse he built to his honour. The hero Hercules slew the giant tyrant Geryon after three days and three nights of continuous battle. Hercules then—in a Celtic gesture—buried the head of Geryon with his weapons and ordered that a city be built on the site.
         </p>
-        <a class="btn btn-primary" href="/html/recipes.html">See recipe</a>
+        <a class="btn btn-primary" href="https://goo.gl/maps/AkGurBDPaRW7DbBH9" target="_blank"> <i class="fas fa-map-marked-alt"></i> Take me there!</a>
       </div>
     </div>
     <!-- /.row -->
@@ -82,15 +81,15 @@
     <!-- Project Two -->
     <div class="row">
       <div class="col-md-7">
-        <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+        <a href="https://www.donostia.eus/taxo.nsf/fwHome?ReadForm&idioma=cas" target="_blank">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="/img/Panoramicas_regiones/16649587209_f314638274_z.jpg" alt="Panorámica de Bilbao">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Project Two</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus
-          distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-        <a class="btn btn-primary" href="/html/recipes.html">View Project</a>
+        <h3>San Sebastian</h3>
+        <p>San Sebastián is a coastal city and municipality located in the Basque Autonomous Community, Spain. It lies on the coast of the Bay of Biscay, 20 km (12 miles) from the French border. Locals call themselves donostiarra.
+        The main economic activities are commerce and tourism, and it is one of the most famous tourist destinations in Spain. Despite the city's small size, events such as the San Sebastián International Film Festival have given it an international dimension. San Sebastián was the European Capital of Culture in 2016.</p>
+        <a class="btn btn-primary" href="https://g.page/barnestor?share" target="_blank"><i class="fas fa-map-marked-alt"></i> Take me there!</a>
       </div>
     </div>
     <!-- /.row -->
@@ -100,16 +99,14 @@
     <!-- Project Three -->
     <div class="row">
       <div class="col-md-7">
-        <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+        <a href="https://www.pamplona.es/en/tourism" target="_blank">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="/img/Panoramicas_regiones/pamplona copy.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Project Three</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde
-          repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias
-          possimus!</p>
-        <a class="btn btn-primary" href="/html/recipes.html">View Project</a>
+        <h3>Pamplona</h3>
+        <p>Pamplona is the capital city of the Autonomous Community of Navarre, in Spain, and historically also of the former Kingdom of Navarre. Pamplona is also the second-largest city in the greater Basque cultural region, composed of two Spanish autonomous communities, Navarre and Basque Country, and the French Basque Country. The city is famous worldwide for the running of the bulls during the San Fermín festival. This festival was brought to literary renown with the 1926 publication of Ernest Hemingway's novel The Sun Also Rises. </p>
+        <a class="btn btn-primary" href="https://goo.gl/maps/SCyaQccvGrBe4rNXA" target="_blank"><i class="fas fa-map-marked-alt"></i> Take me there!</a>
       </div>
     </div>
     <!-- /.row -->
@@ -120,18 +117,72 @@
     <div class="row">
 
       <div class="col-md-7">
-        <a href="#">
-          <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+        <a href="https://www.esmadrid.com/en?utm_referrer=https%3A//www.google.com/" target="_blank">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="/img/Panoramicas_regiones/madrid copy.jpg" alt="">
         </a>
       </div>
       <div class="col-md-5">
-        <h3>Project Four</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem
-          officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?
+        <h3>Madrid</h3>
+        <p>Madrid is the capital and most populous city of Spain. The city has almost 3.3 million inhabitants and a metropolitan area population of approximately 6.5 million. It is the third-largest city in the European Union, surpassed only by London and Berlin. Madrid lies on the River Manzanares in the centre of both the country and the Community of Madrid. As the capital city of Spain, seat of government, and residence of the Spanish monarch, Madrid is also the political, economic and cultural centre of the country.
         </p>
-        <a class="btn btn-primary" href="/html/recipes.html">View Project</a>
+        <a class="btn btn-primary" href="https://g.page/bodegaardosa?share" target="_blank"><i class="fas fa-map-marked-alt"></i> Take me there!</a>
       </div>
     </div>
+
+    <hr>
+
+    <!-- Project Five  -->
+    <div class="row">
+
+      <div class="col-md-7">
+        <a href="https://ajuntament.barcelona.cat/turisme/en/" target="_blank">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="/img/Panoramicas_regiones/barcelona.jpg" alt="">
+        </a>
+      </div>
+      <div class="col-md-5">
+        <h3>Barcelona</h3>
+        <p>Barcelona is the capital and largest city of the autonomous community of Catalonia. It is one of the largest metropolises on the Mediterranean Sea, located on the coast between the mouths of the rivers Llobregat and Besòs. Barcelona has a rich cultural heritage and is today an important cultural centre and a major tourist destination. Particularly renowned are the architectural works of Antoni Gaudí and Lluís Domènech i Montaner, which have been designated UNESCO World Heritage Sites. The city is known for hosting the 1992 Summer Olympics as well as world-class conferences and expositions. 
+        </p>
+        <a class="btn btn-primary" href="https://goo.gl/maps/m65GR7Hn9eKXXF6x6" target="_blank"><i class="fas fa-map-marked-alt"></i> Take me there!</a>
+      </div>
+    </div>
+
+    <hr>
+
+    <!-- Project Six  -->
+    <div class="row">
+
+      <div class="col-md-7">
+        <a href="http://www.aytoleon.es/en/Paginas/en_home.aspx" target="_blank">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="/img/Panoramicas_regiones/leon.jpg" alt="">
+        </a>
+      </div>
+      <div class="col-md-5">
+        <h3>León</h3>
+        <p>León is the capital of the province of León, located in the northwest of Spain. Founded as the military encampment of the Legio VI Victrix around 29 BC, its standing as an encampment city was consolidated with the definitive settlement of the Legio VII Gemina from 74 AD. In 1188, the city hosted the first Parliament in European history under the reign of Alfonso IX. 
+        </p>
+        <a class="btn btn-primary" href="https://goo.gl/maps/Dy3cQg4UxDyn18349" target="_blank"><i class="fas fa-map-marked-alt"></i> Take me there!</a>
+      </div>
+    </div>
+
+    <hr>
+
+    <!-- Project Seven  -->
+    <div class="row">
+
+      <div class="col-md-7">
+        <a href="http://turismo.huelva.es/en" target="_blank">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="/img/Panoramicas_regiones/huelva.JPG" alt="">
+        </a>
+      </div>
+      <div class="col-md-5">
+        <h3>Huelva</h3>
+        <p>Huelva is the capital of the province of Huelva in the autonomous community of Andalusia. It is located along the Gulf of Cádiz coast. According to the 2010 census, the city had a population of 149,410. It has been tentatively defended the existence of pre-Phoenician settlement on the current urban limits since circa 1250 BC, with Phoenicians establishing a stable colony roughly by the 9th century BC.
+        </p>
+        <a class="btn btn-primary" href="https://goo.gl/maps/Z3jWMdEjCvrnuvdbA" target="_blank"><i class="fas fa-map-marked-alt"></i> Take me there!</a>
+      </div>
+    </div>
+    
   </div>
 
 
@@ -176,7 +227,7 @@
     </ul>
   </div>
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3"><i class="far fa-copyright"></i> 2020 Copyright
+  <div class="footer-copyright text-center py-3"><i class="far fa-copyright"></i> <strong>2020 Copyright</strong>
     <a class="pink" href="https://www.wildcodeschool.com/es-ES" target="_blank"> wildcodeschool.com</a>
   </div>
 </footer>
