--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </ul>
     </div>
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3"><i class="far fa-copyright"></i> 2020 Copyright
+    <div class="footer-copyright text-center py-3"><i class="far fa-copyright"></i> <strong>2020 Copyright</strong>
       <a class="pink" href="https://www.wildcodeschool.com/es-ES" target="_blank"> wildcodeschool.com</a>
     </div>
   </footer>
