--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="index.html">Tortilla Hop <span
                 class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="/html/routes.html">Routes</a>
-            <a class="nav-item nav-link" href="/html/recipes.html">Recipes</a>
-            <a class="nav-item nav-link" href="/html/contact.html">Contact</a>
+            <a class="nav-item nav-link" href="/html/routes.html"><i class="fas fa-road"></i> Routes</a>
+            <a class="nav-item nav-link" href="/html/recipes.html"><i class="fas fa-utensils"></i> Recipes</a>
+            <a class="nav-item nav-link" href="/html/contact.html"><i class="fas fa-address-book"></i> Contact</a>
           </div>
         </div>
       </div>
