--- a/html/recipes.html
+++ b/html/recipes.html
@@ -174,10 +174,10 @@
             </div>
             <div class="ingredients">
               <ul >
-                <li>cinco patatas monalisa medianas</li>
-                <li>siete huevos</li>
-                <li>media cebolla grande</li>
-                <li>aceite de oliva virgen extra Lorietta, de los Montes de Toledo</li>
+                <li>5 medium-size <em>Monalisa</em> potatoes</li>
+                <li>7 eggs</li>
+                <li>1/2 big onion</li>
+                <li>Extra virgin <em>Lorietta</em> olive olive, from Montes de Toledo</li>
                 <li>salt</li>
                 </ul>
             </div>
