footer icons, h3 index align

--- a/html/routes.html
+++ b/html/routes.html
@@ -54,9 +54,9 @@
   <div class="container">
 
     <!-- Page Heading -->
-    <h2 class="my-4">ROUTES
-      <p>Discover Spain through tasting delicious tortillas de patata in different regions</p>
-    </h2>
+    <h2 class="my-4">ROUTES</h2>  
+      <h3>Discover Spain through tasting delicious tortillas de patata in different regions</h3>
+    
 
     <!-- Project One -->
     <div class="row">
